--- a/LivrosMVC/Views/Emprestimo/Index.cshtml
+++ b/LivrosMVC/Views/Emprestimo/Index.cshtml
@@ -22,7 +22,7 @@
     @if (TempData["MensagemErro"] != null)
     {
         <div class="alert alert alert-danger text-light" role="alert">
-            @TempData["MensagemSucesso"]
+            @TempData["MensagemErro"]
         </div>
     }
 
