--- a/LivrosMVC/Views/Login/Index.cshtml
+++ b/LivrosMVC/Views/Login/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@if (TempData["MensagemSucesso"] != null)
+﻿@using LivrosMVC.DTO.Usuario
+@model UsuarioLoginDTO
+
+@if (TempData["MensagemSucesso"] != null)
 {
     <div class="alert alert alert-success text-light" role="alert">
         @TempData["MensagemSucesso"]
@@ -8,19 +11,22 @@
 @if (TempData["MensagemErro"] != null)
 {
     <div class="alert alert alert-danger text-light" role="alert">
-        @TempData["MensagemSucesso"]
+        @TempData["MensagemErro"]
     </div>
 }
 
 <div class="container">
-    <form>
+
+    <form method="post" asp-action="Login" asp-controller="Login">
+
         <div class="mb-3">
             <label for="email" class="form-label">Email: </label>
-            <input type="email" class="form-control" id="email" >
+            <input type="email" class="form-control" id="email" asp-for="Email">
         </div>
+
         <div class="mb-3">
             <label for="password" class="form-label">Senha: </label>
-            <input type="password" class="form-control" id="password">
+            <input type="password" class="form-control" id="password" asp-for="Senha">
         </div>
 
         <div class="d-flex justify-content-center">
