--- a/LivrosMVC/Views/Login/Registrar.cshtml
+++ b/LivrosMVC/Views/Login/Registrar.cshtml
@@ -1,4 +1,4 @@
-﻿@using LivrosMVC.DTO
+﻿@using LivrosMVC.DTO.Usuario
 @model UsuarioCadastroDTO
 
 @if (TempData["MensagemSucesso"] != null)
@@ -11,7 +11,7 @@
 @if (TempData["MensagemErro"] != null)
 {
     <div class="alert alert alert-danger text-light" role="alert">
-        @TempData["MensagemSucesso"]
+        @TempData["MensagemErro"]
     </div>
 }
 
