--- a/LivrosMVC/Views/Shared/_LayoutDeslogada.cshtml
+++ b/LivrosMVC/Views/Shared/_LayoutDeslogada.cshtml
@@ -22,14 +22,9 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house-fill mx-2"></i>Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Login" asp-action="Login"><i class="bi bi-house-fill mx-2"></i>Login</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Emprestimo" asp-action="Index"><i class="bi bi-journals mx-2"></i>Emprestimos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Login" asp-action="Logout"><i class="bi bi-journals mx-2"></i>Logout</a>
-                        </li>
+                        
                     </ul>
                 </div>
             </div>
@@ -41,13 +36,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted bg-dark">
-        <div class="container text-light">
-            &copy; 2025 - Livros MVC - <a asp-area="" asp-controller="Login" asp-action="Registrar">Cadastre - se</a>
-        </div>
-    </footer>
-
-
+    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/v/dt/dt-2.1.8/datatables.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
