--- a/LivrosMVC/Views/Home/Index.cshtml
+++ b/LivrosMVC/Views/Home/Index.cshtml
@@ -2,6 +2,20 @@
     ViewData["Title"] = "Home Page - Empréstimos Livros";
 }
 
+@if (TempData["MensagemSucesso"] != null)
+{
+    <div class="alert alert alert-success text-light" role="alert">
+        @TempData["MensagemSucesso"]
+    </div>
+}
+
+@if (TempData["MensagemErro"] != null)
+{
+    <div class="alert alert alert-danger text-light" role="alert">
+        @TempData["MensagemErro"]
+    </div>
+}
+
 <div class="text-center">
     
     <h1>Empréstimos Online</h1>
