--- a/LivrosMVC/Views/Login/Registrar.cshtml
+++ b/LivrosMVC/Views/Login/Registrar.cshtml
@@ -1,6 +1,10 @@
 ﻿@using LivrosMVC.DTO.Usuario
 @model UsuarioCadastroDTO
 
+@{
+    Layout = "_LayoutDeslogada";
+}
+
 @if (TempData["MensagemSucesso"] != null)
 {
     <div class="alert alert alert-success text-light" role="alert">
@@ -56,7 +60,7 @@
 
         <div class="d-flex justify-content-center">
             <button type="submit" class="btn btn-primary w-25 mx-2">Cadastrar</button>
-            <a asp-action="Index" asp-controller="Login" class="btn w-25">Voltar</a>
+            <a asp-action="Login" asp-controller="Login" class="btn w-25">Voltar</a>
         </div>
 
     </form>
